updated comparisis analysis notebook with better input data

--- a/TEST_compare_wikidata_MB.ipynb
+++ b/TEST_compare_wikidata_MB.ipynb
@@ -37,60 +37,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>city</th>\n",
        "      <th>cityLabel</th>\n",
        "      <th>population</th>\n",
-       "      <th>gps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Edo</td>\n",
-       "      <td>http://www.wikidata.org/.well-known/genid/87cd...</td>\n",
-       "      <td>Point(139.774444444 35.683888888)</td>\n",
+       "      <th>41018</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q20541864</td>\n",
+       "      <td>Lousadela</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Barxelas</td>\n",
+       "      <th>15985</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q48791</td>\n",
+       "      <td>Tower City</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-7.845761111 42.370038888)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A Garduñeira</td>\n",
+       "      <th>40007</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q12381764</td>\n",
+       "      <td>Q12381764</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-7.968938888 42.340813888)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Q61379203</td>\n",
+       "      <th>33214</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1991598</td>\n",
+       "      <td>South Park View</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-7.481878 42.713333)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Q20546571</td>\n",
+       "      <th>4335</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1475379</td>\n",
+       "      <td>Rineia</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-7.679743 42.339763)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      cityLabel                                         population  \\\n",
-       "0           Edo  http://www.wikidata.org/.well-known/genid/87cd...   \n",
-       "1      Barxelas                                                  0   \n",
-       "2  A Garduñeira                                                  0   \n",
-       "3     Q61379203                                                  0   \n",
-       "4     Q20546571                                                  0   \n",
-       "\n",
-       "                                 gps  \n",
-       "0  Point(139.774444444 35.683888888)  \n",
-       "1   Point(-7.845761111 42.370038888)  \n",
-       "2   Point(-7.968938888 42.340813888)  \n",
-       "3         Point(-7.481878 42.713333)  \n",
-       "4         Point(-7.679743 42.339763)  "
+       "                                           city        cityLabel population\n",
+       "41018  http://www.wikidata.org/entity/Q20541864        Lousadela          0\n",
+       "15985     http://www.wikidata.org/entity/Q48791       Tower City          0\n",
+       "40007  http://www.wikidata.org/entity/Q12381764        Q12381764          0\n",
+       "33214   http://www.wikidata.org/entity/Q1991598  South Park View          0\n",
+       "4335    http://www.wikidata.org/entity/Q1475379           Rineia          0"
       ]
      },
      "execution_count": 2,
@@ -100,7 +93,20 @@
    ],
    "source": [
     "# Read a sample dataset of 39000 cities from wikidata with their population\n",
-    "df_wiki = pd.read_csv('sample_data/query_cities_population_gps.csv')\n",
+    "wikidata_query = \"\"\"\n",
+    "SELECT ?city ?cityLabel ?population\n",
+    "WHERE {\n",
+    "  ?city wdt:P31/wdt:P279* wd:Q515.\n",
+    "  OPTIONAL { ?city wdt:P1082 ?population. }\n",
+    "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],en\". }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# read predownloaded dataset. This is a sample of 44107 cities from wikidata with their population\n",
+    "df_wiki = pd.read_csv('sample_data/query_cities_population_entityid.csv')\n",
+    "\n",
+    "# Sort dataframe in ascending order by population\n",
+    "df_wiki.sort_values(by=['population'], ascending=True, inplace=True)\n",
     "df_wiki.head()"
    ]
   },
@@ -122,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +234,7 @@
        "[118964 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,103 +301,103 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>city</th>\n",
        "      <th>cityLabel</th>\n",
        "      <th>population</th>\n",
-       "      <th>gps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>barxelas</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-7.845761111 42.370038888)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a garduñeira</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-7.968938888 42.340813888)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>q61379203</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-7.481878 42.713333)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>q20546571</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-7.679743 42.339763)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>41018</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q20541864</td>\n",
        "      <td>lousadela</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-7.238972222 42.604722222)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>q12398919</td>\n",
+       "      <th>41130</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q113513507</td>\n",
+       "      <td>a garduñeira</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-6.965963888 42.451605555)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>44040</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q61379203</td>\n",
+       "      <td>q61379203</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40207</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q12393950</td>\n",
        "      <td>q12393950</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-6.984194444 42.439966666)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>q12381764</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-7.69 42.316111)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>puerto navarino</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Point(-68.3239 -54.9256)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>34930</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6026356</td>\n",
        "      <td>mundobriga</td>\n",
        "      <td>0</td>\n",
-       "      <td>Point(-1.7 41.25)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13364</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6026356</td>\n",
+       "      <td>mundobriga</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41156</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q113513557</td>\n",
+       "      <td>barxelas</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40873</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q7258576</td>\n",
+       "      <td>puerto navarino</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41040</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q20546571</td>\n",
+       "      <td>q20546571</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40963</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q12399755</td>\n",
+       "      <td>q12399755</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          cityLabel population                               gps\n",
-       "1          barxelas          0  Point(-7.845761111 42.370038888)\n",
-       "2      a garduñeira          0  Point(-7.968938888 42.340813888)\n",
-       "3         q61379203          0        Point(-7.481878 42.713333)\n",
-       "4         q20546571          0        Point(-7.679743 42.339763)\n",
-       "5         lousadela          0  Point(-7.238972222 42.604722222)\n",
-       "6         q12398919          0  Point(-6.965963888 42.451605555)\n",
-       "7         q12393950          0  Point(-6.984194444 42.439966666)\n",
-       "8         q12381764          0            Point(-7.69 42.316111)\n",
-       "9   puerto navarino          0          Point(-68.3239 -54.9256)\n",
-       "20       mundobriga          0                 Point(-1.7 41.25)"
+       "                                            city        cityLabel population\n",
+       "41018   http://www.wikidata.org/entity/Q20541864        lousadela          0\n",
+       "41130  http://www.wikidata.org/entity/Q113513507     a garduñeira          0\n",
+       "44040   http://www.wikidata.org/entity/Q61379203        q61379203          0\n",
+       "40207   http://www.wikidata.org/entity/Q12393950        q12393950          0\n",
+       "34930    http://www.wikidata.org/entity/Q6026356       mundobriga          0\n",
+       "13364    http://www.wikidata.org/entity/Q6026356       mundobriga          0\n",
+       "41156  http://www.wikidata.org/entity/Q113513557         barxelas          0\n",
+       "40873    http://www.wikidata.org/entity/Q7258576  puerto navarino          0\n",
+       "41040   http://www.wikidata.org/entity/Q20546571        q20546571          0\n",
+       "40963   http://www.wikidata.org/entity/Q12399755        q12399755          0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Previewing cities that are NOT in MusicBrainz database\n",
-    "not_in_MeB.head(10)"
+    "not_in_MeB.sort_values(by = 'population').head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -415,41 +421,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>city</th>\n",
        "      <th>cityLabel</th>\n",
        "      <th>population</th>\n",
-       "      <th>gps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9813</th>\n",
-       "      <td>vetrino</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>Point(27.435355 43.317169)</td>\n",
+       "      <th>3146</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q739353</td>\n",
+       "      <td>dorestad</td>\n",
+       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9814</th>\n",
-       "      <td>bârza</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>Point(24.144543 44.324595)</td>\n",
+       "      <th>32603</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q739353</td>\n",
+       "      <td>dorestad</td>\n",
+       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9815</th>\n",
-       "      <td>dracea</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>Point(25.01666667 43.86666667)</td>\n",
+       "      <th>9011</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2604911</td>\n",
+       "      <td>bidjabidjan</td>\n",
+       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9816</th>\n",
-       "      <td>măceșu de jos</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>Point(23.71666667 43.88333333)</td>\n",
+       "      <th>2501</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q615707</td>\n",
+       "      <td>pedernales, delta amacuro</td>\n",
+       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9820</th>\n",
-       "      <td>nușeni</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>Point(24.2 47.1)</td>\n",
+       "      <th>6778</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1404020</td>\n",
+       "      <td>ras gharib</td>\n",
+       "      <td>100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -458,58 +464,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38874</th>\n",
-       "      <td>saint petersburg</td>\n",
-       "      <td>5384342</td>\n",
-       "      <td>Point(30.316666666 59.95)</td>\n",
+       "      <th>34057</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q155281</td>\n",
+       "      <td>kuldīga</td>\n",
+       "      <td>9974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38889</th>\n",
-       "      <td>pudong</td>\n",
-       "      <td>5681512</td>\n",
-       "      <td>Point(121.539722222 31.223055555)</td>\n",
+       "      <th>15190</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q155281</td>\n",
+       "      <td>kuldīga</td>\n",
+       "      <td>9974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38944</th>\n",
-       "      <td>new york city</td>\n",
-       "      <td>8804190</td>\n",
-       "      <td>Point(-74.0 40.7)</td>\n",
+       "      <th>2247</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q405663</td>\n",
+       "      <td>pavlikeni</td>\n",
+       "      <td>9986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38953</th>\n",
-       "      <td>mexico city</td>\n",
-       "      <td>9209944</td>\n",
-       "      <td>Point(-99.145555555 19.419444444)</td>\n",
+       "      <th>3152</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q740499</td>\n",
+       "      <td>bishoftu</td>\n",
+       "      <td>99928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38971</th>\n",
-       "      <td>ho chi minh city</td>\n",
-       "      <td>10380000</td>\n",
-       "      <td>Point(106.701944444 10.775555555)</td>\n",
+       "      <th>5456</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1020110</td>\n",
+       "      <td>mumias</td>\n",
+       "      <td>99987</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6691 rows × 3 columns</p>\n",
+       "<p>7268 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              cityLabel population                                gps\n",
-       "9813            vetrino       1001         Point(27.435355 43.317169)\n",
-       "9814              bârza       1001         Point(24.144543 44.324595)\n",
-       "9815             dracea       1001     Point(25.01666667 43.86666667)\n",
-       "9816      măceșu de jos       1001     Point(23.71666667 43.88333333)\n",
-       "9820             nușeni       1002                   Point(24.2 47.1)\n",
-       "...                 ...        ...                                ...\n",
-       "38874  saint petersburg    5384342          Point(30.316666666 59.95)\n",
-       "38889            pudong    5681512  Point(121.539722222 31.223055555)\n",
-       "38944     new york city    8804190                  Point(-74.0 40.7)\n",
-       "38953       mexico city    9209944  Point(-99.145555555 19.419444444)\n",
-       "38971  ho chi minh city   10380000  Point(106.701944444 10.775555555)\n",
+       "                                          city                  cityLabel  \\\n",
+       "3146    http://www.wikidata.org/entity/Q739353                   dorestad   \n",
+       "32603   http://www.wikidata.org/entity/Q739353                   dorestad   \n",
+       "9011   http://www.wikidata.org/entity/Q2604911                bidjabidjan   \n",
+       "2501    http://www.wikidata.org/entity/Q615707  pedernales, delta amacuro   \n",
+       "6778   http://www.wikidata.org/entity/Q1404020                 ras gharib   \n",
+       "...                                        ...                        ...   \n",
+       "34057   http://www.wikidata.org/entity/Q155281                    kuldīga   \n",
+       "15190   http://www.wikidata.org/entity/Q155281                    kuldīga   \n",
+       "2247    http://www.wikidata.org/entity/Q405663                  pavlikeni   \n",
+       "3152    http://www.wikidata.org/entity/Q740499                   bishoftu   \n",
+       "5456   http://www.wikidata.org/entity/Q1020110                     mumias   \n",
        "\n",
-       "[6691 rows x 3 columns]"
+       "      population  \n",
+       "3146       10000  \n",
+       "32603      10000  \n",
+       "9011       10000  \n",
+       "2501       10000  \n",
+       "6778      100000  \n",
+       "...          ...  \n",
+       "34057       9974  \n",
+       "15190       9974  \n",
+       "2247        9986  \n",
+       "3152       99928  \n",
+       "5456       99987  \n",
+       "\n",
+       "[7268 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
