--- a/TEST_wikidata_queries.ipynb
+++ b/TEST_wikidata_queries.ipynb
@@ -176,10 +176,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_3166_1_code</th>\n",
+       "      <th>countryLabel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q760</td>\n",
+       "      <td>LC</td>\n",
+       "      <td>Saint Lucia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q763</td>\n",
+       "      <td>KN</td>\n",
+       "      <td>Saint Kitts and Nevis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q766</td>\n",
+       "      <td>JM</td>\n",
+       "      <td>Jamaica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q769</td>\n",
+       "      <td>GD</td>\n",
+       "      <td>Grenada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q774</td>\n",
+       "      <td>GT</td>\n",
+       "      <td>Guatemala</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q736</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>Ecuador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q739</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q750</td>\n",
+       "      <td>BO</td>\n",
+       "      <td>Bolivia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q754</td>\n",
+       "      <td>TT</td>\n",
+       "      <td>Trinidad and Tobago</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q757</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>Saint Vincent and the Grenadines</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>196 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 country iso_3166_1_code  \\\n",
+       "0    http://www.wikidata.org/entity/Q760              LC   \n",
+       "1    http://www.wikidata.org/entity/Q763              KN   \n",
+       "2    http://www.wikidata.org/entity/Q766              JM   \n",
+       "3    http://www.wikidata.org/entity/Q769              GD   \n",
+       "4    http://www.wikidata.org/entity/Q774              GT   \n",
+       "..                                   ...             ...   \n",
+       "191  http://www.wikidata.org/entity/Q736              EC   \n",
+       "192  http://www.wikidata.org/entity/Q739              CO   \n",
+       "193  http://www.wikidata.org/entity/Q750              BO   \n",
+       "194  http://www.wikidata.org/entity/Q754              TT   \n",
+       "195  http://www.wikidata.org/entity/Q757              VC   \n",
+       "\n",
+       "                         countryLabel  \n",
+       "0                         Saint Lucia  \n",
+       "1               Saint Kitts and Nevis  \n",
+       "2                             Jamaica  \n",
+       "3                             Grenada  \n",
+       "4                           Guatemala  \n",
+       "..                                ...  \n",
+       "191                           Ecuador  \n",
+       "192                          Colombia  \n",
+       "193                           Bolivia  \n",
+       "194               Trinidad and Tobago  \n",
+       "195  Saint Vincent and the Grenadines  \n",
+       "\n",
+       "[196 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query2 = \"\"\"SELECT ?country ?countryLabel ?iso_3166_1_code WHERE {\n",
+    "  ?country wdt:P31 wd:Q3624078.\n",
+    "  ?country wdt:P297 ?iso_3166_1_code.\n",
+    "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"en\". }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "df2 = fetch_query(query2)\n",
+    "df2"
+   ]
   }
  ],
  "metadata": {
