minor value fixes in TEST_compare_wikidata...ipynb

--- a/TEST_compare_wikidata_MB.ipynb
+++ b/TEST_compare_wikidata_MB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,13 @@
        "4335    http://www.wikidata.org/entity/Q1475379           Rineia          0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read a sample dataset of 39000 cities from wikidata with their population\n",
+    "# Read a sample dataset of 44107 cities from wikidata with their population\n",
     "wikidata_query = \"\"\"\n",
     "SELECT ?city ?cityLabel ?population\n",
     "WHERE {\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[118964 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -308,21 +308,45 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>41018</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q20541864</td>\n",
-       "      <td>lousadela</td>\n",
-       "      <td>0</td>\n",
+       "      <th>5456</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1020110</td>\n",
+       "      <td>mumias</td>\n",
+       "      <td>99987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41130</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q113513507</td>\n",
-       "      <td>a garduñeira</td>\n",
-       "      <td>0</td>\n",
+       "      <th>3152</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q740499</td>\n",
+       "      <td>bishoftu</td>\n",
+       "      <td>99928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44040</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q61379203</td>\n",
-       "      <td>q61379203</td>\n",
+       "      <th>2247</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q405663</td>\n",
+       "      <td>pavlikeni</td>\n",
+       "      <td>9986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7765</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2535326</td>\n",
+       "      <td>adășeni</td>\n",
+       "      <td>998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15190</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q155281</td>\n",
+       "      <td>kuldīga</td>\n",
+       "      <td>9974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34930</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6026356</td>\n",
+       "      <td>mundobriga</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -332,72 +356,58 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34930</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q6026356</td>\n",
-       "      <td>mundobriga</td>\n",
+       "      <th>44040</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q61379203</td>\n",
+       "      <td>q61379203</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13364</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q6026356</td>\n",
-       "      <td>mundobriga</td>\n",
+       "      <th>41130</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q113513507</td>\n",
+       "      <td>a garduñeira</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41156</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q113513557</td>\n",
-       "      <td>barxelas</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40873</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q7258576</td>\n",
-       "      <td>puerto navarino</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41040</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q20546571</td>\n",
-       "      <td>q20546571</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40963</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q12399755</td>\n",
-       "      <td>q12399755</td>\n",
+       "      <th>41018</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q20541864</td>\n",
+       "      <td>lousadela</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8905 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            city        cityLabel population\n",
-       "41018   http://www.wikidata.org/entity/Q20541864        lousadela          0\n",
-       "41130  http://www.wikidata.org/entity/Q113513507     a garduñeira          0\n",
-       "44040   http://www.wikidata.org/entity/Q61379203        q61379203          0\n",
-       "40207   http://www.wikidata.org/entity/Q12393950        q12393950          0\n",
-       "34930    http://www.wikidata.org/entity/Q6026356       mundobriga          0\n",
-       "13364    http://www.wikidata.org/entity/Q6026356       mundobriga          0\n",
-       "41156  http://www.wikidata.org/entity/Q113513557         barxelas          0\n",
-       "40873    http://www.wikidata.org/entity/Q7258576  puerto navarino          0\n",
-       "41040   http://www.wikidata.org/entity/Q20546571        q20546571          0\n",
-       "40963   http://www.wikidata.org/entity/Q12399755        q12399755          0"
+       "                                            city     cityLabel population\n",
+       "5456     http://www.wikidata.org/entity/Q1020110        mumias      99987\n",
+       "3152      http://www.wikidata.org/entity/Q740499      bishoftu      99928\n",
+       "2247      http://www.wikidata.org/entity/Q405663     pavlikeni       9986\n",
+       "7765     http://www.wikidata.org/entity/Q2535326       adășeni        998\n",
+       "15190     http://www.wikidata.org/entity/Q155281       kuldīga       9974\n",
+       "...                                          ...           ...        ...\n",
+       "34930    http://www.wikidata.org/entity/Q6026356    mundobriga          0\n",
+       "40207   http://www.wikidata.org/entity/Q12393950     q12393950          0\n",
+       "44040   http://www.wikidata.org/entity/Q61379203     q61379203          0\n",
+       "41130  http://www.wikidata.org/entity/Q113513507  a garduñeira          0\n",
+       "41018   http://www.wikidata.org/entity/Q20541864     lousadela          0\n",
+       "\n",
+       "[8905 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Previewing cities that are NOT in MusicBrainz database\n",
-    "not_in_MeB.sort_values(by = 'population').head(10)"
+    "not_in_MeB.sort_values(by = 'population', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +538,7 @@
        "[7268 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
